--- a/MLA2019.md
+++ b/MLA2019.md
@@ -9,7 +9,7 @@ Speakers: Rebecca Davis, St. Edward’s Univ.; Matthew K. Gold, Graduate Center,
 
 [brief description]
 
-keywords: digital pedagogy, digital humanities, pedagogy, syllabus, politics
+keywords:  pedagogy,  humanities, pedagogy, syllabus, politics
 
 --
 
